--- a/less/form-blocks/filter.less
+++ b/less/form-blocks/filter.less
@@ -8,7 +8,7 @@
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
-  color: @color-lightgreen;
+  color: @lightgreen;
   text-transform: uppercase;
   }
 
@@ -43,10 +43,10 @@
     display: flex;
     align-items: baseline;
     &--type {
-     background: @bg-white;
+     background: @white;
    }
    &--color {
-    background: @color-lightgrey;
+    background: @lightgrey;
   }
 }
 
@@ -70,7 +70,7 @@
   align-items: baseline;
   &--color {
     display: flex;
-    background-color: @color-lightgrey;
+    background-color: @lightgrey;
   }
   &--type {
     display: inline-block;
