--- a/less/index-blocks/page-footer.less
+++ b/less/index-blocks/page-footer.less
@@ -51,24 +51,22 @@
     display: flex;
 
   }
-  .page-footer__copyright {
-    padding: 0;
-  }
+  .social-links,
+  .page-footer__copyright{
 
-  .page-footer__social {
-    margin-bottom: 0;
+    margin:0;
   }
 }
 
-// @media @desktop-widths {
+@media @desktop-widths {
 
-//   .page-footer__wrapper {
-//     min-height: 143px; /* Временно для сетки */
-//   }
-//   .page-footer__social {
-//     width: 145px;
-//   }
-//   .page-footer__copyright {
-//     width: 185px;
-//   }
-// }
+  .page-footer__wrapper {
+    min-height: 143px;
+    .wrapper();
+  }
+  .social-links,
+  .page-footer__copyright{
+
+    margin:0;
+  }
+}
