--- a/less/style.less
+++ b/less/style.less
@@ -17,6 +17,9 @@
 @import url("../less/form-blocks/filter.less");
 @import url("../less/form-blocks/contactform.less");
 
+
 @import url("../less/catalog-blocks/catalog-page-header.less");
 @import url("../less/catalog-blocks/item-blocks-wrapper.less");
 @import url("../less/catalog-blocks/videocontent.less");
+
+@import url("../less/global/button.less");
