--- a/less/variables.less
+++ b/less/variables.less
@@ -1,12 +1,14 @@
-@bg-white: #ffffff;
-@color-lightgrey: #f1f1f1;
-@color-darkgrey: #444444;
-@color-lightgreen: #63d1bb;
-@color-darkgreen: #56c3b2;
+@white: #ffffff;
+@lightgrey: #f1f1f1;
+@darkgrey: #444444;
+@lightgreen: #63d1bb;
+@darkgreen: #56c3b2;
 @border: #cccccc;
 @bg-image: #ececec;
-
+@icon-color: #63d1bb;
 
 @mobile-widths-only: ~"(max-width: 767px)";
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1200px)";
+
+@retina: ~"(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
