--- a/less/catalog-blocks/catalog-page-header.less
+++ b/less/catalog-blocks/catalog-page-header.less
@@ -14,7 +14,7 @@
   align-items: center;
   min-width: 100%;
   min-height: 177px;
-  background-color:@color-lightgrey;
+  background-color:@lightgrey;
   margin:0;
   font-size: 27px;
   line-height: 30px;
