--- a/less/form-blocks/form-page-header.less
+++ b/less/form-blocks/form-page-header.less
@@ -20,7 +20,7 @@
   line-height: 30px;
   font-weight: 700;
 
-  background-color: @color-lightgrey;
+  background-color: @lightgrey;
 
     display: flex;
     justify-content: center;
@@ -30,7 +30,7 @@
 .form-page__header p {
   padding: 30px 29px 26px;
   margin: 0;
-  color: @color-darkgrey;
+  color: @darkgrey;
   font-size: 13px;
   line-height: 24px;
   font-weight: 400;
