--- a/less/index-blocks/advantages.less
+++ b/less/index-blocks/advantages.less
@@ -1,13 +1,14 @@
 /* Файл index-blocks/advantages.less */
 .advantages__wrapper{
  margin: 0 30px;
+ padding-top: 40px;
 }
 
 .advantages__title,
 .reviews__title {
  font-size: 25px;
  line-height: 30px;
- font-weight: bold;
+ font-weight: 700;
  font-style: normal;
 }
 
@@ -16,36 +17,25 @@
   padding: 0;
 
   font-size: 17px;
-  font-style: normal;
+  font-weight: 700;
   list-style-type: none;
 }
 
 .advantages__item {
   padding: 50px 0 20px 0;
-
-  &--1 {
-    background: url(../img/icon-feature-1.svg) no-repeat;
-  }
-  &--2 {
-    background: url(../img/icon-feature-2.svg) no-repeat;
+margin:0;
   }
 
-  &--3 {
-    background: url(../img/icon-feature-3.svg) no-repeat;
-  }
-
-  &--4 {
-    background: url(../img/icon-feature-4.svg) no-repeat;
-  }
-
-  &--5 {
-    background: url(../img/icon-feature-5.svg) no-repeat;
-  }
-
-  &--6 {
-    background: url(../img/icon-feature-6.svg) no-repeat;
-  }
+.icon__item--1 {
+  width: 33px;
+  height: 38px;
+  fill: #cccccc;
 }
+
+
+
+
+
 
 /* Планшетная версия */
 
