--- a/less/index-blocks/contacts.less
+++ b/less/index-blocks/contacts.less
@@ -24,13 +24,13 @@
 }
 .contacts__email a {
   text-decoration:none ;
-  color:@color-darkgrey;
-  border-bottom: 1px solid @color-lightgreen;
+  color:@darkgrey;
+  border-bottom: 1px solid @lightgreen;
 
   &:hover {
-   color:@color-lightgreen;
+   color:@lightgreen;
 
-   border-bottom: 1px solid @color-darkgreen
+   border-bottom: 1px solid @darkgreen
  }
  &:active {
   opacity: 0.3;
@@ -56,18 +56,30 @@
 
 .map {
 
-  background: url(../img/map-mobile@1x.jpg) no-repeat;
+  // background: url(../img/map-mobile@1x.jpg) no-repeat;
   width: 100%;
   height: 458px;
   margin-top: 79px;
+  position: relative;
+
+  &::after {
+    position: absolute;
+    top: 45%;
+    left: 55%;
+
+    width: 67px;
+    height: 100px;
+
+    background: url("../img/icon-map-pin.svg") no-repeat;
+
+    content: "";
+ }
 }
 
 iframe {
   width: 100%;
   height: 458px;
 }
-
-
 
 
 
@@ -80,15 +92,26 @@ iframe {
     flex-wrap: wrap;
     align-items: baseline;
     margin: 60px 50px;
+
   }
 
   .contacts__title {
     font-size: 43px;
     line-height: 50px;
+
   }
 
   .contacts__block{
-    display:flex;
+    display:flex;  position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      width: 47px;
+      height: 81px;
+      background: url(../img/icon-flag.svg);
+      right: 0;
+      top: -97px;
+    }
   }
 
   .contacts__email {
@@ -113,6 +136,11 @@ iframe {
   .contacts__block {
     flex-direction: column;
     display: flex;
+
+    &::after {
+    left: -175px;
+    top: -111px;
+    }
   }
 
   .contacts__email,
