--- a/less/index-blocks/features.less
+++ b/less/index-blocks/features.less
@@ -8,48 +8,66 @@
 }
 
 .feature-item a {
-  color:#ffffff;
+  color:@white;
   text-decoration: none;
   margin-left: 30px;
   padding-right: 135px;
 }
 
-.feature-item--top {
-  background: @color-lightgreen;
+
+
+
+.feature-item {
   position: relative;
+
   display: flex;
   align-items: center;
   min-height: 105px;
 
-  &::after {
+  text-decoration: none;
+  color:@white;
+
+    &::after {
     position: absolute;
     content: "";
-    width: 50px;
-    height: 65px;
+
     top: 23px;
     right: 25px;
-    background-image: url(../img/icon-interior.svg);
-    background-repeat: no-repeat;
+
     opacity: 0.2;
   }
+
+  &:hover {
+    margin-top: -5px;
+    padding-bottom: 35px;
+  }
+
+  &:active a {opacity: 0.3;
+  }
 }
-.feature-item--bottom {
-  background: @color-darkgreen;
-  position: relative;
-  display: flex;
-  align-items: center;
-  min-height: 105px;
+
+.feature-item--top {
+  background: @lightgreen;
 
   &::after {
-    position: absolute;
-    content: "";
+    width: 50px;
+    height: 65px;
+
+    background-image: url(../img/icon-interior.svg);
+    background-repeat: no-repeat;
+    }
+}
+
+
+.feature-item--bottom {
+  background: @darkgreen;
+  &::after {
     width: 69px;
     height: 65px;
-    top: 23px;
-    right: 25px;
+
     background-image: url(../img/icon-toy.svg);
     background-repeat: no-repeat;
-    opacity: 0.2;
+
   }
 }
 
