--- a/less/index-blocks/main-page-header.less
+++ b/less/index-blocks/main-page-header.less
@@ -1,12 +1,11 @@
 
 /*Файл blocks/main-page__header.less*/
-.main-page__wrapper {border: 1px dashed red;}
 
 .main-page__header {
   background: @bg-image url(../img/hero-mobile@1x.jpg) no-repeat 50% 0;
   min-width: 100%;
   min-height: 358px;
-
+  background-size: cover;
 }
 
 .main-page__title {
@@ -16,34 +15,75 @@
 }
 
 
+@media (min-width: 320px) and (min-resolution: 144dpi),
+(min-width: 320px) and (min-resolution: 1.5dppx) {
+  .main-page__header {
+    background-image: url(../img/hero-mobile@2x.jpg);
+  }
+}
+
+
+
 @media @tablet-widths {
 
-
   .main-page__header {
-    background: @bg-image url(../img/hero-mobile@1x.jpg) no-repeat 50% 0;
     width: 100%;
     height: 732px;
-    background-size: cover;
+    position: relative;
+  &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 36px;
+
+      background: url(../img/bg-zigzag-fill.svg) repeat;
+
+      bottom: -21px;
+      z-index: 2;
+    }
   }
 
   .main-page__title {
     font-size: 43px;
     line-height: 50px;
     padding-top: 157px;
+  }
+
+  @media (min-width: 768px) and (min-resolution: 144dpi),
+  (min-width: 768px) and (min-resolution: 1.5dppx) {
+    .main-page__header {
+      background-image: url(../img/hero-mobile@2x.jpg);
     }
   }
+}
 
 
 
 @media @desktop-widths {
 
   .main-page__header {
-    background: @bg-image url(../img/hero-mobile@1x.jpg) no-repeat 50% 0;
+    background: @bg-image url(../img/hero-desktop@1x.jpg) no-repeat 50% 0;
     width: 100%;
     height: 742px;
     background-size: cover;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 34px;
+
+      background: url(../img/bg-zigzag-fill.svg) repeat;
+
+      bottom: -18px;
+      z-index: 2;
+    }
   }
 
+  @media (min-width: 1150px) and (min-resolution: 144dpi),
+  (min-width: 1150px) and (min-resolution: 1.5dppx) {
+   .main-page__header {
+    background-image: url(../img/hero-desktop@2x.jpg);
   }
-
-
+}
+}
